--- a/views/css/bootstrap-grid.css
+++ b/views/css/bootstrap-grid.css
@@ -785,3 +785,5 @@ hr {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
+Contact GitHub API Training Shop Blog About
+© 2016 GitHub, Inc. Terms Privacy Security Status Help
